--- a/P4.md
+++ b/P4.md
@@ -1,7 +1,7 @@
-Práctica 3
+Práctica 4
 ================
 Ana Escoto
-1/11/2022
+23/06/2022
 
 -   [Paquetes](#paquetes)
 -   [Cargando los datos](#cargando-los-datos)
@@ -56,8 +56,6 @@ pacman::p_load(tidyverse,
 
 # Cargando los datos
 
-Desde STATA
-
 ``` r
 ags_t321 <- read_dta("./datos/AGS_SDEMT321.dta", encoding="latin1") %>% 
   clean_names()
@@ -106,7 +104,7 @@ cor_test
 tidy(cor_test)
 ```
 
-    ## Warning in knit_print.huxtable(ht): Unrecognized output format "gfm". Using `to_screen` to print huxtables.
+    ## Warning in knit_print.huxtable(ht): Unrecognized output format "gfm-yaml". Using `to_screen` to print huxtables.
     ## Set options("huxtable.knitr_output_format") manually to "latex", "html", "rtf", "docx", "pptx", "md" or "screen".
 
 ┌─────────────────────────────────────────────────────────────────────────────
@@ -128,9 +126,13 @@ conf.high, method, alternative
 
 # Modelo simple
 
-*y* = *β*<sub>*o*</sub> + *β*<sub>1</sub>*x* + *ϵ*
-Donde los parámetros *β*<sub>*o*</sub> y *β*<sub>1</sub> describen la
-pendiente y el intercepto de la población, respectivamente.
+![y=\\beta_o+\\beta_1x +\\epsilon](https://latex.codecogs.com/png.image?%5Cdpi%7B110%7D&space;%5Cbg_white&space;y%3D%5Cbeta_o%2B%5Cbeta_1x%20%2B%5Cepsilon "y=\beta_o+\beta_1x +\epsilon")
+
+Donde los parámetros
+![\\beta_o](https://latex.codecogs.com/png.image?%5Cdpi%7B110%7D&space;%5Cbg_white&space;%5Cbeta_o "\beta_o")
+y
+![\\beta_1](https://latex.codecogs.com/png.image?%5Cdpi%7B110%7D&space;%5Cbg_white&space;%5Cbeta_1 "\beta_1")
+describen la pendiente y el intercepto de la población, respectivamente.
 
 No está muy bien comportada, pero ligeramente es mejor con logaritmo
 
@@ -173,7 +175,7 @@ Con “tidy()”
 tidy(modelo) # Pruebas de hipótesis de los coeficientes
 ```
 
-    ## Warning in knit_print.huxtable(ht): Unrecognized output format "gfm". Using `to_screen` to print huxtables.
+    ## Warning in knit_print.huxtable(ht): Unrecognized output format "gfm-yaml". Using `to_screen` to print huxtables.
     ## Set options("huxtable.knitr_output_format") manually to "latex", "html", "rtf", "docx", "pptx", "md" or "screen".
 
          ┌────────────────────────────────────────────────────────────┐
@@ -204,7 +206,7 @@ correspondiente:
 glance(modelo) # resultado ajuste global
 ```
 
-    ## Warning in knit_print.huxtable(ht): Unrecognized output format "gfm". Using `to_screen` to print huxtables.
+    ## Warning in knit_print.huxtable(ht): Unrecognized output format "gfm-yaml". Using `to_screen` to print huxtables.
     ## Set options("huxtable.knitr_output_format") manually to "latex", "html", "rtf", "docx", "pptx", "md" or "screen".
 
      ┌────────────────────────────────────────────────────────────────────
@@ -225,7 +227,7 @@ logLik, AIC, BIC, deviance, df.residual, nobs
 anova(modelo)
 ```
 
-    ## Warning in knit_print.huxtable(ht): Unrecognized output format "gfm". Using `to_screen` to print huxtables.
+    ## Warning in knit_print.huxtable(ht): Unrecognized output format "gfm-yaml". Using `to_screen` to print huxtables.
     ## Set options("huxtable.knitr_output_format") manually to "latex", "html", "rtf", "docx", "pptx", "md" or "screen".
 
                ┌───────────────────────────────────────────────┐
@@ -235,7 +237,7 @@ anova(modelo)
                │ 3205      948     0.296                       │
                └───────────────────────────────────────────────┘
 
-Column names: Df, Sum Sq, Mean Sq, F value, Pr(&gt;F)
+Column names: Df, Sum Sq, Mean Sq, F value, Pr(\>F)
 
 # Diagnósticos
 
@@ -245,7 +247,7 @@ plot(modelo)
 
 ![](P4_files/figure-gfm/unnamed-chunk-11-1.png)<!-- -->![](P4_files/figure-gfm/unnamed-chunk-11-2.png)<!-- -->![](P4_files/figure-gfm/unnamed-chunk-11-3.png)<!-- -->![](P4_files/figure-gfm/unnamed-chunk-11-4.png)<!-- -->
 
-\#\#1. Outliers y Normalidad
+\##1. Outliers y Normalidad
 
 ``` r
 # Assessing Outliers
@@ -267,7 +269,7 @@ ggpubr::ggqqplot(ags_t321$log_ing_x_hrs)
 
 ![](P4_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
 
-\#\#2. Homocedasticidad
+\##2. Homocedasticidad
 
 ``` r
 # non-constant error variance test
@@ -354,7 +356,7 @@ pruebaf0<-anova(modelo, modelo1)
 pruebaf0
 ```
 
-    ## Warning in knit_print.huxtable(ht): Unrecognized output format "gfm". Using `to_screen` to print huxtables.
+    ## Warning in knit_print.huxtable(ht): Unrecognized output format "gfm-yaml". Using `to_screen` to print huxtables.
     ## Set options("huxtable.knitr_output_format") manually to "latex", "html", "rtf", "docx", "pptx", "md" or "screen".
 
               ┌──────────────────────────────────────────────────┐
@@ -364,12 +366,12 @@ pruebaf0
               │ 3.2e+03    947     1        1.32   4.47   0.0345 │
               └──────────────────────────────────────────────────┘
 
-Column names: Res.Df, RSS, Df, Sum of Sq, F, Pr(&gt;F)
+Column names: Res.Df, RSS, Df, Sum of Sq, F, Pr(\>F)
 
 Como puedes ver, el resultado muestra un Df de 1 (lo que indica que el
 modelo más complejo tiene un parámetro adicional) y un valor p muy
-pequeño (&lt;.51). Esto significa que agregar el sexo al modelo lleva a
-un ajuste significativamente mejor sobre el modelo original.
+pequeño (\<.51). Esto significa que agregar el sexo al modelo lleva a un
+ajuste significativamente mejor sobre el modelo original.
 
 Podemos seguir añadiendo variables sólo “sumando” en la función
 
@@ -411,7 +413,7 @@ pruebaf1<-anova(modelo1, modelo2)
 pruebaf1
 ```
 
-    ## Warning in knit_print.huxtable(ht): Unrecognized output format "gfm". Using `to_screen` to print huxtables.
+    ## Warning in knit_print.huxtable(ht): Unrecognized output format "gfm-yaml". Using `to_screen` to print huxtables.
     ## Set options("huxtable.knitr_output_format") manually to "latex", "html", "rtf", "docx", "pptx", "md" or "screen".
 
               ┌─────────────────────────────────────────────────┐
@@ -421,7 +423,7 @@ pruebaf1
               │ 3.2e+03   918     1        28.7   100   3.1e-23 │
               └─────────────────────────────────────────────────┘
 
-Column names: Res.Df, RSS, Df, Sum of Sq, F, Pr(&gt;F)
+Column names: Res.Df, RSS, Df, Sum of Sq, F, Pr(\>F)
 
 Hoy que tenemos más variables podemos hablar de revisar dos supuestos
 más.
@@ -474,7 +476,7 @@ Observations
 Dependent variable
 </td>
 <td style="text-align:right;">
-log\_ing\_x\_hrs
+log_ing_x\_hrs
 </td>
 </tr>
 <tr>
@@ -554,7 +556,7 @@ p
 </tr>
 <tr>
 <td style="text-align:left;font-weight: bold;">
-anios\_esc
+anios_esc
 </td>
 <td style="text-align:right;">
 0.06
@@ -600,7 +602,7 @@ Observations
 Dependent variable
 </td>
 <td style="text-align:right;">
-log\_ing\_x\_hrs
+log_ing_x\_hrs
 </td>
 </tr>
 <tr>
@@ -680,7 +682,7 @@ p
 </tr>
 <tr>
 <td style="text-align:left;font-weight: bold;">
-anios\_esc
+anios_esc
 </td>
 <td style="text-align:right;">
 0.07
@@ -760,7 +762,7 @@ Observations
 Dependent variable
 </td>
 <td style="text-align:right;">
-log\_ing\_x\_hrs
+log_ing_x\_hrs
 </td>
 </tr>
 <tr>
@@ -840,7 +842,7 @@ p
 </tr>
 <tr>
 <td style="text-align:left;font-weight: bold;">
-anios\_esc
+anios_esc
 </td>
 <td style="text-align:right;">
 0.26
@@ -857,7 +859,7 @@ anios\_esc
 </tr>
 <tr>
 <td style="text-align:left;font-weight: bold;">
-sex
+sexMujer
 </td>
 <td style="text-align:right;">
 -0.05
@@ -906,7 +908,7 @@ También se pueden comparar modelos:
 export_summs(modelo, modelo1, modelo2)
 ```
 
-    ## Warning in knit_print.huxtable(x, ...): Unrecognized output format "gfm". Using `to_screen` to print huxtables.
+    ## Warning in knit_print.huxtable(x, ...): Unrecognized output format "gfm-yaml". Using `to_screen` to print huxtables.
     ## Set options("huxtable.knitr_output_format") manually to "latex", "html", "rtf", "docx", "pptx", "md" or "screen".
 
            ─────────────────────────────────────────────────────────
@@ -928,7 +930,7 @@ export_summs(modelo, modelo1, modelo2)
 
 Column names: names, Model 1, Model 2, Model 3
 
-También el paquete “sjPlot” tiene el comando “plot\_model()”
+También el paquete “sjPlot” tiene el comando “plot_model()”
 
 ``` r
 sjPlot::plot_model(modelo1)
@@ -1006,7 +1008,7 @@ eff<-plot_model(modelo2, type="eff", terms = "anios_esc")
 eff$data
 ```
 
-    ## Warning in knit_print.huxtable(ht): Unrecognized output format "gfm". Using `to_screen` to print huxtables.
+    ## Warning in knit_print.huxtable(ht): Unrecognized output format "gfm-yaml". Using `to_screen` to print huxtables.
     ## Set options("huxtable.knitr_output_format") manually to "latex", "html", "rtf", "docx", "pptx", "md" or "screen".
 
      ┌───────────────────────────────────────────────────────────────────┐
@@ -1028,14 +1030,14 @@ eff$data
      └───────────────────────────────────────────────────────────────────┘
 
 Column names: x, predicted, std.error, conf.low, conf.high, group,
-group\_col
+group_col
 
 ``` r
 eff<-plot_model(modelo2, type="pred", terms = "anios_esc")
 eff$data
 ```
 
-    ## Warning in knit_print.huxtable(ht): Unrecognized output format "gfm". Using `to_screen` to print huxtables.
+    ## Warning in knit_print.huxtable(ht): Unrecognized output format "gfm-yaml". Using `to_screen` to print huxtables.
     ## Set options("huxtable.knitr_output_format") manually to "latex", "html", "rtf", "docx", "pptx", "md" or "screen".
 
      ┌───────────────────────────────────────────────────────────────────┐
@@ -1057,7 +1059,7 @@ eff$data
      └───────────────────────────────────────────────────────────────────┘
 
 Column names: x, predicted, std.error, conf.low, conf.high, group,
-group\_col
+group_col
 
 # Extensiones del modelo de regresión
 
