--- a/P4.Rmd
+++ b/P4.Rmd
@@ -8,11 +8,11 @@ output:
     toc_float:
       collapsed: false
       smooth_scroll: false
-  github_document:
-    toc: true
-    toc_depth: 2
-  pdf_document:
-    latex_engine: xelatex
+  # github_document:
+  #   toc: true
+  #   toc_depth: 2
+  # pdf_document:
+  #   latex_engine: xelatex
 ---
 \newpage 
 \tableofcontents 
